# jupyter-book

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  MAINTAINING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASES.md  SUMMARY.md  _config.yml  about.md  announcements.md  build-requirements.txt  codecov.yml  conftest.py  dependabot.yml  environment.yml  flake.nix  glossary.md  index.md  install.md  intro.md  myst.yml  netlify.toml  noxfile.py  overview.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  (+6 more)
.binder/: postBuild  requirements.txt
.circleci/: artifact_path  config.yml  run_notebooks.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml  bug_report.md  config.yml  documentation-improvements.md  feature_request.md  prerelease.yml  welcome.md
.github/workflows/: build-deploy-book.yml  check-release.yml  ci.yml  deploy.yml  full-release.yml  pdf.yml  publish-changelog.yml  publish-release.yml  publish.yml  pyppeteer_reqs.txt  scheduled_tests.yml  tests.yml
_build/: intro.md
_build/01/: what-is-data-science.md
_build/02/: causality-and-experiments.md
_build/03/: programming-in-python.md
_build/04/: Types.md
_build/features/: citations.md  features.md  hiding.md  interact.md  markdown.md  notebooks.md  search.md
_build/guide/: 00_intro.md  01_overview.md  02_setup.md  03_configure.md  03_prepare.md  04_build.md  05_publish.md  06_faq.md  07_advanced.md
_chapters/: intro.md
_chapters/01/: what-is-data-science.md
_chapters/02/: causality-and-experiments.md
_chapters/03/: programming-in-python.md
_chapters/04/: Types.md
_chapters/introduction/: intro.md  markdown.md  notebooks.md
_data/: navigation.yml  textbook.yml  toc.yml
_guide/: 01_overview.md  02_setup.md  03_configure.md  04_build.md  05_publish.md  06_faq.md  07_advanced.md
_includes/: archive-single.html  buttons.html  custom.html  disqus.html  dom-update.html  download.html  head.html  interact-update.html  interact.html  masthead.html  mathjax.html  nav_list  page-nav.html  sidebar-toggle.html  sidebar.html  textbook.html  textbook_pagination.html  thebe.html  toc  toc.html
_includes/buttons/: binder.html  download.html  jupyterhub.html
_includes/head/: custom.html
_includes/js/: copy-button.html  hide-cell.html  interact-update.html  thebe.html  thebelab.html
_layouts/: default.html  posts-simple.html  single.html  textbook.html
_posts/: 2018-01-02-first-announcements.md  2018-02-02-second-announcement.md  2018-02-05-third-announcement.md  2018-05-13-introduction.md
_sass/: main.scss
_sass/components/: _components.button.scss  _components.hidecells.scss  _components.interact-button.scss  _components.textbook.scss  _components.textbook__page.scss  _components.textbook__sidebar-right.scss  _components.textbook__sidebar.scss
_sass/elements/: _elements.variables.scss
about/: toolchain.md  why-switch-mystmd.md
assets/css/: custom.css  main.scss  notebook-markdown.css  syntax.css
assets/custom/: custom.css
assets/html/: index.html
assets/js/: scripts.js
assets/templates/: jekyllmd.tpl
binder/: environment.yml  postBuild
book_template/: Makefile
book_template/_data/: toc.yml
book_template/_includes/: head.html
book_template/scripts/: generate_book.py
content/: intro.md
content/02/: causality-and-experiments.md
content/features/: features.md  hiding.ipynb  interact.ipynb  notebooks.ipynb  search.ipynb
content/guide/: 00_intro.md  01_overview.md  02_setup.md  03_configure.md  03_prepare.md  04_build.md  05_publish.md  06_faq.md  07_advanced.md
data/: IV.csv  actors.csv  anscombe.csv  baby.csv  banknote.csv  birds.csv  birth_time.csv  breast-cancer.csv  bta.csv  children_raw.csv  ckd.csv  cones.csv  couples.csv  deflategate.csv  educ_inc.csv  everyone_raw.csv  football.csv  galton.csv  galton_subset.csv  grades_and_piazza.csv  heights.csv  hodgkins.csv  house.csv  hybrid.csv  hybrid_reg.csv  income_small.csv  kaiser_ethnicity_children.csv  kaiser_ethnicity_everyone.csv  little_women.csv  married_couples.csv  minard.csv  movies_by_year.csv  nba2013.csv  nba_salaries.csv  nc-est2014-agesex-res.csv  nc-est2015-agesex-res.csv  observed_outcomes.csv  potential_outcomes.csv  roulette_wheel.csv  sat2014.csv  (+9 more)
docs/: CHANGELOG.html  CHANGELOG.md  _config.yml  _toc.yml  authoring.md  authors.yml  cite.md  community.md  conf.py  contribute.md  execution.md  faq.md  feed.xml  footer.md  gallery.md  gallery.txt  gallery.yml  get-started.md  getting-started.md  help.md  index.html  index.md  install.md  intro.html  intro.md  myst.yml  overview.md  package.json  plugins.md  redirects.json  references.bib  requirements.txt  site.yml  start.md  toc.yml  upgrade.md
docs/01/: what-is-data-science.html
docs/02/: causality-and-experiments.html
docs/03/: programming-in-python.html
examples/: single_page.ipynb
jupyter_book/: Dockerfile  __init__.py  __main__.py  build.py  config.py  config_schema.json  create.py  default_config.yml  jbsphinx.py  main.py  page.py  pdf.py  report.py  run.py  sphinx.py  toc.py  utils.py  yaml.py
mynewbook/: _config.yml  _toc.yml  intro.md  plotting.md
notebooks/: intro.md
reference/: glossary.md  why-switch-mystmd.md
scripts/: check_doc_requirements.py  clean.py  clear_doc_outputs.py  execute_all_notebooks.py  generate_book.py  generate_summary_from_folders.py  generate_textbook.py  generate_toc_from_folders.py  install_latex.sh  license.py  texlive.profile
src/: download_nav_items.py  generate_release_notes.py
start/: build-websites.md  build.md  create-content.md  export-pdfs.md  init.md  publish.md
tests/: conftest.py  test_build.py  test_clean.py  test_config.py  test_page.py  test_pdf.py  test_sphinx_jupyterbook_latex.py  test_sphinx_multitoc_numbering.py  test_toc.py  test_tocdirective.py  test_utils.py
ts/: build.ts  clean.ts  clirun.ts  index.ts  init.ts  options.ts  site.ts  templates.ts  version.ts
(+2032 files in other folders)
